1.9.6b sidebar -> options visibility fix toolbar sizing tweaks edit form accepts case-insensitive searchTerms

--- a/src/quickmenu.css
+++ b/src/quickmenu.css
@@ -225,6 +225,7 @@ BODY {
 	font-family:Arial;
 	font-size:11pt;
 	background-color:inherit;
+	white-space:nowrap;
 }
 .tile.singleColumn {
 	width:300px;
